feat mudança de cor dos links do menu burguer, e adição de classe para link selecionado depende a página

--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ header {
   transition: 0.8s;
 }
 
+.links-menu-burguer a {
+  color: #fbfbfb;
+}
+
 .menu a:hover,
 .links-menu-burguer a:hover {
   color: #f6c34a;
